force-app/main/default/objects/refedge__Custom_Settings__c/refedge__Custom_Settings__c.object-meta.xml
<CustomObject>
    <description>This object holds the custom settings for the app</description>
    <label>RefEdge Settings</label>
    <nameField>
        <label>Custom Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RefEdge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>