force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Advanced_Routing_Settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Advanced_Routing_Settings__c</fullName>
    <description>View all Advanced Routing Settings, manage the Advanced Routing Table, and edit Advanced Routing Filters.</description>
    <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c + &apos;AdvancedRoutingChecker&apos;, &apos;Manage&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>View all Advanced Routing Settings, manage the Advanced Routing Table, and edit Advanced Routing Filters.</inlineHelpText>
    <label>Advanced Routing Settings</label>
    <type>Text</type>
</CustomField>