force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Apply_Opportunity_Stage_Filter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Apply_Opportunity_Stage_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When arriving at Ref Search from an Opportunity, the Opportunity Stage will be automatically applied as a Filter on Reference Content search results. It is recommended that any unwanted Stage Attributes are deleted from the Attributes tab.</inlineHelpText>
    <label>Apply Opportunity Stage Filter</label>
    <type>Checkbox</type>
</CustomField>