force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Auto_Assign_Sales_Rewards__c.field-meta.xml
<CustomField>
    <fullName>refedge__Auto_Assign_Sales_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Points will be issued to a user automatically following the completion of a Reference Activity. It is mutually exclusive to the &quot;Auto Issue User Points on Feedback&quot; checkbox.</inlineHelpText>
    <label>Auto Issue User Points</label>
    <type>Checkbox</type>
</CustomField>