force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Email_Phone_Required__c.field-meta.xml
<CustomField>
    <fullName>refedge__Email_Phone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When approving a Peer to Peer Request, it is not required to populate the email and/or phone fields (if they are blank) to successfully approve the Request.</inlineHelpText>
    <label>Email/Phone Not Required</label>
    <type>Checkbox</type>
</CustomField>