force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Enable_Ref_Search_Export__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Ref_Search_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Export feature on Ref Search Page</description>
    <inlineHelpText>Determines whether the &apos;Export&apos; button displays in Ref Search for the Accounts, Contacts, and Content areas. When enabled, the users must also have the Read permission in their Permission Set/Profile for the &apos;Export&apos; button to be visible.</inlineHelpText>
    <label>Enable Ref Search Export</label>
    <type>Checkbox</type>
</CustomField>