force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Event_Request_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event_Request_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Request Slack</label>
    <type>Checkbox</type>
</CustomField>