force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>refedge__Expiration_Days__c</fullName>
    <inlineHelpText>Specifies the number of days after issuance that customer points should expire. Used in conjunction with the Customer Expiration Timeframe choice of &quot; &apos;x&apos; days from award date&quot;.</inlineHelpText>
    <label>Customer Points Expiration Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>