force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Expire_Sales_Rewards__c.field-meta.xml
<CustomField>
    <fullName>refedge__Expire_Sales_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User points will automatically expire based on the &quot;User Expiration Timeframe&quot; selected.</inlineHelpText>
    <label>Expire User Points</label>
    <type>Checkbox</type>
</CustomField>