force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Fdbk_Reminders_To_Be_Sent__c.field-meta.xml
<CustomField>
    <fullName>refedge__Fdbk_Reminders_To_Be_Sent__c</fullName>
    <inlineHelpText>The number of feedback reminder notifications that should be sent after the initial feedback notification. If set to 0 or blank then no reminders will be sent</inlineHelpText>
    <label>Feedback Reminders To Be Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>