force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Feedback_Response_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Feedback_Response_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Response Slack</label>
    <type>Checkbox</type>
</CustomField>