force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__General_Notes__c.field-meta.xml
<CustomField>
    <fullName>refedge__General_Notes__c</fullName>
    <description>Note that displays on the Account Request form after the request type has been selected.</description>
    <inlineHelpText>Note that displays on the Account Request form after the request type has been selected.</inlineHelpText>
    <label>General Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>