force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Import_Object__c.field-meta.xml
<CustomField>
    <fullName>refedge__Import_Object__c</fullName>
    <description>Select the ReferenceEdge objects for which imports are enabled</description>
    <inlineHelpText>Select the Objects that will be available for import.</inlineHelpText>
    <label>Import Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>