force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Influitive_API_URL__c.field-meta.xml
<CustomField>
    <fullName>refedge__Influitive_API_URL__c</fullName>
    <label>Influitive API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>