force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Influitive_Authorization_Token__c.field-meta.xml
<CustomField>
    <fullName>refedge__Influitive_Authorization_Token__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c + &apos;AddINFLAuthToken&apos;, &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influitive Authorization Token</label>
    <type>Text</type>
</CustomField>