force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Initial_Notification_member_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Initial_Notification_member_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the Opportunity Owner when Reference Lead Finder is enabled, their Opportunity meets the Reference Lead Finder criteria, and the Account is already a Reference Program Member.</inlineHelpText>
    <label>RLF Initial - New Contact Chatter</label>
    <type>Checkbox</type>
</CustomField>