force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Number_Of_Reminders_To_Be_Sent__c.field-meta.xml
<CustomField>
    <fullName>refedge__Number_Of_Reminders_To_Be_Sent__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>The number of reminder notifications that should be sent after the initial notification.</inlineHelpText>
    <label>Number Of Reminders To Be Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>