force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Number_of_request_accounts__c.field-meta.xml
<CustomField>
    <fullName>refedge__Number_of_request_accounts__c</fullName>
    <description>The maximum number of reference accounts that can be requested in a single request.</description>
    <inlineHelpText>The maximum number of reference accounts that can be requested in a single request.</inlineHelpText>
    <label>Max Accounts per Request</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>