force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Opportunity_DC_Close_Stage__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity_DC_Close_Stage__c</fullName>
    <description>The Data Collector notification will be sent to the Opportunity Owner at this Stage (if the Opportunity meets the Minimum Opportunity Size value).</description>
    <inlineHelpText>The Data Collector notification will be sent to the Opportunity Owner at this Stage (if the Opportunity meets the Minimum Opportunity Size value).</inlineHelpText>
    <label>Opportunity Closed Stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>