force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Private_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Private_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkBox would be helpful for the users who want that the chatter and email post should be private and not public.</description>
    <inlineHelpText>Select this checkBox if you want the chatter post should be private.</inlineHelpText>
    <label>Private Chatter</label>
    <type>Checkbox</type>
</CustomField>