force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Prompt_Message__c.field-meta.xml
<CustomField>
    <fullName>refedge__Prompt_Message__c</fullName>
    <defaultValue>&quot;Would you like to see References for this Opportunity?&quot;</defaultValue>
    <inlineHelpText>The message that is displayed in the &quot;Need References?&quot; prompt. Click “Preview” link (click Edit to see this link ) to see how the prompt will look.</inlineHelpText>
    <label>Prompt Message</label>
    <type>TextArea</type>
</CustomField>