force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Lead_Count__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Lead_Count__c</fullName>
    <inlineHelpText>Displays the number of Accounts currently in the list of prospective Reference Accounts. This is the total number of Prospective Reference records that could potentially be included in a prospecting campaign and ignores the setting &quot;Include in Campaign&quot; on the records.</inlineHelpText>
    <label>Reference Prospector Lead Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>