force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Ref_Prospector_Subject__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Prospector_Subject__c</fullName>
    <defaultValue>&quot;Potential Reference Accounts&quot;</defaultValue>
    <inlineHelpText>The default Subject for the notification email sent to the Owners of potential Reference Accounts included in the Reference Lead campaign. It can be modified on the &quot;Launch Campaign&quot; page prior to launching the campaign.</inlineHelpText>
    <label>Ref Prospector Notification Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>