force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Request_Feedback_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Request_Feedback_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the Chatter sent to the requester asking for feedback on the specified number of days after the original Request deadline.</inlineHelpText>
    <label>Request Feedback Chatter</label>
    <type>Checkbox</type>
</CustomField>