force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Sales_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>refedge__Sales_Expiration_Days__c</fullName>
    <description>User Points Expiration Days</description>
    <inlineHelpText>Specifies the number of days after issuance that user points should expire. Used in conjunction with the User Expiration Timeframe choice of &quot; &apos;x&apos; days from award date&quot;.</inlineHelpText>
    <label>User Points Expiration Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>