force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Search_Opp_Stage_Names__c.field-meta.xml
<CustomField>
    <fullName>refedge__Search_Opp_Stage_Names__c</fullName>
    <label>Search Opp Stage Names</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>