force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Send_reminder_for_automatic__c.field-meta.xml
<CustomField>
    <fullName>refedge__Send_reminder_for_automatic__c</fullName>
    <description>The number of days before a scheduled automatic Profile Update that a notification is sent to the team reminding them of the upcoming launch date.</description>
    <inlineHelpText>The number of days before a scheduled automatic Profile Update that a notification is sent to the team reminding them of the upcoming launch date.</inlineHelpText>
    <label>Send Reminder for Automatic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>