force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Show_Summary__c.field-meta.xml
<CustomField>
    <fullName>refedge__Show_Summary__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables visibility of the Reference Profile Summary on the Reference Profile inline page on the Account and Contact page layouts</inlineHelpText>
    <label>Show Summary</label>
    <type>Checkbox</type>
</CustomField>