force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Smart_Search__c.field-meta.xml
<CustomField>
    <fullName>refedge__Smart_Search__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;SmartSearchSettingPage?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determine which mapped Attributes will be used to pre-populate Filters on Ref Search.</inlineHelpText>
    <label>Smart Search</label>
    <type>Text</type>
</CustomField>