force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Teams_Notification_Settings__c.field-meta.xml
<CustomField>
    <fullName>refedge__Teams_Notification_Settings__c</fullName>
    <label>Teams Notification Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>