force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__UserEvidence_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__UserEvidence_Content_Type__c</fullName>
    <inlineHelpText>Designates which Reference Content Type should be used for UserEvidence Reviews.</inlineHelpText>
    <label>UserEvidence Content Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>