force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__UserEvidence_URL_Field__c.field-meta.xml
<CustomField>
    <fullName>refedge__UserEvidence_URL_Field__c</fullName>
    <inlineHelpText>Designates which Contact field contain the UserEvidence Content URL.</inlineHelpText>
    <label>UserEvidence URL Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>