force-app/main/default/objects/refedge__Custom_Settings__c/validationRules/refedge__Case_and_Opportunity_cannot_be_required.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__Case_and_Opportunity_cannot_be_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(refedge__Project_Case_Required__c, refedge__Project_Opportunity_Required__c)</errorConditionFormula>
    <errorMessage>Case and Opportunity cannot be required at the same time.</errorMessage>
</ValidationRule>