force-app/main/default/objects/refedge__Custom_Settings__c/validationRules/refedge__ManagedToPeer2Peer.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__ManagedToPeer2Peer</fullName>
    <active>true</active>
    <description>The value cannot be negative.</description>
    <errorConditionFormula>refedge__Managed_to_P2P_Min__c &lt; 0</errorConditionFormula>
    <errorDisplayField>refedge__Managed_to_P2P_Min__c</errorDisplayField>
    <errorMessage>The value cannot be negative.</errorMessage>
</ValidationRule>