force-app/main/default/objects/refedge__Custom_Settings__c/validationRules/refedge__Reference_profile_and_Nomination_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__Reference_profile_and_Nomination_checked</fullName>
    <active>true</active>
    <description>Reference profile and Nomination both cannot be checked/unchecked</description>
    <errorConditionFormula>OR(AND(refedge__Create_Nomination__c, refedge__Create_Reference_Profile__c), AND(NOT(refedge__Create_Nomination__c), NOT(refedge__Create_Reference_Profile__c)))</errorConditionFormula>
    <errorMessage>Reference profile and Nomination both cannot be checked/unchecked.</errorMessage>
</ValidationRule>