force-app/main/default/objects/refedge__Custom_Settings__c/validationRules/refedge__RUL_Activites.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__RUL_Activites</fullName>
    <active>true</active>
    <errorConditionFormula>(refedge__RUL_Activities__c &gt; 99) || (refedge__RUL_Activities__c &lt; 1) || (refedge__RUL_Activities_Contact__c &gt; 99) || (refedge__RUL_Activities_Contact__c &lt; 1)</errorConditionFormula>
    <errorMessage>You must specify a number of activities in the period from 1 to 99</errorMessage>
</ValidationRule>