force-app/main/default/objects/refedge__Custom_Settings__c/validationRules/refedge__RUL_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__RUL_Period</fullName>
    <active>true</active>
    <errorConditionFormula>(refedge__RUL_Period__c  &gt; 365) ||(refedge__RUL_Period__c  &lt; 1)</errorConditionFormula>
    <errorDisplayField>refedge__RUL_Period__c</errorDisplayField>
    <errorMessage>You must specify a number of days in the period from 1 to 365</errorMessage>
</ValidationRule>