force-app/main/default/objects/refedge__Custom_Settings__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Active_Version__c</columns>
    <columns>refedge__Current_Version__c</columns>
    <columns>refedge__Include_Weekends__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>